<?xml version="1.0" encoding="utf-8"?>
<!-- Keys must match the KEY_* constants in mqtt/MqttSettings.kt -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mqtt_category_broker">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="mqtt_enabled"
            app:summary="@string/mqtt_enabled_summary"
            app:title="@string/mqtt_enabled" />
        <EditTextPreference
            app:dialogMessage="@string/mqtt_host_hint"
            app:key="mqtt_host"
            app:title="@string/mqtt_host"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="1883"
            app:key="mqtt_port"
            app:title="@string/mqtt_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/mqtt_user_hint"
            app:key="mqtt_user"
            app:title="@string/mqtt_user"
            app:useSimpleSummaryProvider="true" />
        <!-- Summary is set in code, so the password isn't shown on screen -->
        <EditTextPreference
            app:key="mqtt_password"
            app:title="@string/mqtt_password" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mqtt_category_topics">
        <EditTextPreference
            app:dialogMessage="@string/mqtt_topic_prefix_hint"
            app:key="mqtt_topic_prefix"
            app:title="@string/mqtt_topic_prefix"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/mqtt_client_id_hint"
            app:key="mqtt_client_id"
            app:title="@string/mqtt_client_id"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="mqtt_topics"
            app:persistent="false"
            app:selectable="false"
            app:title="@string/mqtt_topics" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mqtt_category_commands">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="mqtt_audio_announcements"
            app:summary="@string/mqtt_audio_announcements_summary"
            app:title="@string/mqtt_audio_announcements" />
    </PreferenceCategory>
</PreferenceScreen>
