<?xml version="1.0" encoding="utf-8"?>
<!-- Keys must match the KEY_* constants in Settings.kt -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_server">
        <EditTextPreference
            app:key="server_url"
            app:title="@string/settings_server_url"
            app:dialogMessage="@string/settings_server_url_hint"
            app:useSimpleSummaryProvider="true" />
        <!-- Summary is set in code, so the key isn't shown on screen -->
        <EditTextPreference
            app:key="api_key"
            app:title="@string/settings_api_key"
            app:dialogMessage="@string/settings_api_key_hint" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_slideshow">
        <EditTextPreference
            app:key="max_pictures_per_album"
            app:title="@string/settings_max_pictures"
            app:dialogMessage="@string/settings_max_pictures_hint"
            app:defaultValue="20"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="percent_of_album"
            app:title="@string/settings_percent"
            app:dialogMessage="@string/settings_percent_hint"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            android:max="300"
            app:key="slide_seconds"
            app:title="@string/settings_slide_seconds"
            app:summary="@string/settings_slide_seconds_hint"
            app:defaultValue="30"
            app:min="5"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_albums">
        <EditTextPreference
            app:key="album_name_include"
            app:title="@string/settings_album_include"
            app:dialogMessage="@string/settings_album_include_hint"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="album_name_exclude"
            app:title="@string/settings_album_exclude"
            app:dialogMessage="@string/settings_album_exclude_hint"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="album_from_year"
            app:title="@string/settings_album_from_year"
            app:dialogMessage="@string/settings_album_year_hint"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="album_to_year"
            app:title="@string/settings_album_to_year"
            app:dialogMessage="@string/settings_album_year_hint"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_weather">
        <SwitchPreferenceCompat
            app:key="weather_enabled"
            app:title="@string/settings_weather_enabled"
            app:summary="@string/settings_weather_enabled_hint"
            app:defaultValue="false" />
        <EditTextPreference
            app:key="weather_latitude"
            app:title="@string/settings_weather_latitude"
            app:dialogMessage="@string/settings_weather_latitude_hint"
            app:dependency="weather_enabled"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="weather_longitude"
            app:title="@string/settings_weather_longitude"
            app:dialogMessage="@string/settings_weather_longitude_hint"
            app:dependency="weather_enabled"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_screen">
        <SeekBarPreference
            android:max="30"
            app:key="screen_off_minutes"
            app:title="@string/settings_screen_off_minutes"
            app:summary="@string/settings_screen_off_minutes_hint"
            app:defaultValue="0"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />
        <SwitchPreferenceCompat
            app:key="night_screen_off"
            app:title="@string/settings_night_screen_off"
            app:summary="@string/settings_night_screen_off_hint"
            app:defaultValue="false" />
        <EditTextPreference
            app:key="night_start_hour"
            app:title="@string/settings_night_start"
            app:dialogMessage="@string/settings_night_hour_hint"
            app:defaultValue="0"
            app:dependency="night_screen_off"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="night_end_hour"
            app:title="@string/settings_night_end"
            app:dialogMessage="@string/settings_night_hour_hint"
            app:defaultValue="6"
            app:dependency="night_screen_off"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
